src/test/deca/syntax/valid/provided/function.deca
{

int func(int a){
     return a*a;
}

int b=4;
int c=func(b);

}