src/test/deca/syntax/invalid/declaAfter.deca
{
print("ok");
int a = 9;
}